# trade-simulator

./: CMakeLists.txt  README.md  build.bat
include/: OrderBook.hpp  TradeSimulatorUI.hpp  WebSocketClient.hpp
src/: OrderBook.cpp  TradeSimulatorUI.cpp  WebSocketClient.cpp  main.cpp
